// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`module: pending export: removePending When testObject is either pending or lagging When in lagging Should remove test from lagging 1`] = `
Object {
  "lagging": Array [],
  "optionalFields": Object {},
  "pending": Array [],
  "prevTestObjects": Array [],
  "skippedTests": Array [],
  "suiteId": "1000",
  "testCallbacks": Object {
    "doneCallbacks": Array [],
    "fieldCallbacks": Object {},
  },
  "testObjects": Array [],
  "testObjectsCursor": 0,
}
`;

exports[`module: pending export: removePending When testObject is either pending or lagging When in pending Should remove test from pending 1`] = `
Object {
  "lagging": Array [],
  "optionalFields": Object {},
  "pending": Array [],
  "prevTestObjects": Array [],
  "skippedTests": Array [],
  "suiteId": "1000",
  "testCallbacks": Object {
    "doneCallbacks": Array [],
    "fieldCallbacks": Object {},
  },
  "testObjects": Array [],
  "testObjectsCursor": 0,
}
`;

exports[`module: pending export: setPending Should set supplied test object as pending 1`] = `
Object {
  "lagging": Array [],
  "optionalFields": Object {},
  "pending": Array [
    VestTest {
      "fieldName": "test_0",
      "groupName": "group_name",
      "id": "4",
      "message": "Some statement string",
      "status": "PENDING",
      "testFn": [MockFunction],
      "warns": false,
    },
  ],
  "prevTestObjects": Array [],
  "skippedTests": Array [],
  "suiteId": "1000",
  "testCallbacks": Object {
    "doneCallbacks": Array [],
    "fieldCallbacks": Object {},
  },
  "testObjects": Array [],
  "testObjectsCursor": 0,
}
`;

exports[`module: pending export: setPending When a field of the same profile is in lagging array Should remove test from lagging array 1`] = `
Object {
  "lagging": Array [
    VestTest {
      "fieldName": "test_2",
      "id": "12",
      "message": "Some statement string",
      "status": "UNTESTED",
      "testFn": [MockFunction],
      "warns": false,
    },
    VestTest {
      "fieldName": "test_1",
      "id": "11",
      "message": "Some statement string",
      "status": "UNTESTED",
      "testFn": [MockFunction],
      "warns": false,
    },
  ],
  "optionalFields": Object {},
  "pending": Array [
    VestTest {
      "fieldName": "test_0",
      "groupName": "group_name",
      "id": "15",
      "message": "failure message",
      "status": "PENDING",
      "testFn": [MockFunction],
      "warns": false,
    },
  ],
  "prevTestObjects": Array [],
  "skippedTests": Array [],
  "suiteId": "1000",
  "testCallbacks": Object {
    "doneCallbacks": Array [],
    "fieldCallbacks": Object {},
  },
  "testObjects": Array [],
  "testObjectsCursor": 0,
}
`;
